# MCP-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  a.txt  agent.py  alembic.ini  csv_rag.py  csv_rag_test.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  z.txt
alembic/: env.py
alembic/versions/: 045eb2cf421a_create_csv_files_table.py  3381a6556250_create_csv_files_table.py
chroma_data/: chroma.sqlite3
doc/: DEVELOPMENT.MD
docs/: DEVELOPER_GUIDE.md
manual/: adapters.py  executor.py  factories.py  registry.py  test_registry.py
manual/adapters/: __init__.py  in_process.py
manual/managers/: file_manager.py  ingest_manager.py  query_manager.py
manual/transports/: stdio.py
src/: __init__.py
src/adapters/: __init__.py  celery.py  in_process.py
src/adaptors/: celery.py
src/app/adapters/: celery.py  http.py
src/app/agent/: agent_tool.py  local_client.py
src/app/api/: schemas.py  tool.py
src/app/tool/: __init__.py  adapters.py  dispatcher.py  init_tools.py  registry.py
src/app/tool/tools/csv_rag/: __init__.py  chromadb.py  crud.py  embedding.py  loader.py  models.py  rag.py  schema.py  schemas.py
src/app/tool/tools/csv_rag/api/: __init__.py  router.py
src/app/tool/tools/rag/: loader.py  models.py  rag.py
src/app/tool/tools/weather/: __init__.py  schema.py  weather.py
src/base/: adapter_base.py  base_tool.py  llm_base.py  models.py  vector_store.py
src/config/: __init__.py  celery.py  db.py  logger.py  settings.py  vector_store.py
src/enum/: csv_status.py  embedding_status.py  executor.py  tools.py
src/helpers/: chromadb.py  embedding.py  file_util.py  lazy_wrapper.py  normalize.py  object_to_dict.py  pg_lock.py  row_checksum.py
src/services/: chromadb.py  embedding.py  worker.py
src/tests/: csv_rag.py  test_fastmcp_smoke.py
static/json/: iran_cities.json
(+16 files in other folders)
