[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiocsv>=1.3.2",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "chromadb>=1.0.20",
    "fastapi>=0.116.2",
    "fastmcp>=2.12.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "pandas>=2.3.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "rapidfuzz>=3.14.1",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.0",
    "sqlalchemy>=2.0.43",
]
